--- a/deploy/src/main/resources/templates/livros-add.html
+++ b/deploy/src/main/resources/templates/livros-add.html
@@ -13,6 +13,9 @@
             <a th:href="@{/livros-list}">Listar Livros</a>
         </nav>
     </header>
+    <form action="" method="post">
+        
+    </form>
     
 </body>
 </html>
