--- a/deploy/src/main/resources/templates/livros-add.html
+++ b/deploy/src/main/resources/templates/livros-add.html
@@ -14,7 +14,11 @@
         </nav>
     </header>
     <form action="" method="post">
-        
+        <label for="titulo">Título</label>
+        <input type="text" name="titulo" id="titulo">
+        <label for="autor">Autor</label>
+        <input type="text" name="autor" id="autor">
+        <input type="submit" value="Enviar">
     </form>
     
 </body>
